Last corrections before publication

--- a/parts/configurators.adoc
+++ b/parts/configurators.adoc
@@ -83,7 +83,7 @@ public class LegacyClass {
 
 TIP: Injection code will look like
 
-[source, subs="verbatim,quotes"]
+[source, subs="verbatim,quotes", role="smaller"]
 ----
 public class InjectionBean {
 
